tests/ui/compile_fail/multiple_unnamed_fields_generic.rs
#[derive(enumorph::Enumorph)]
enum Enum<T> {
    A(T, u8),
}

fn main() {}
