tests/ui/compile_fail/multiple_unnamed_fields_generic.stderr
error: only variants with one field are supported
 --> tests/ui/compile_fail/multiple_unnamed_fields_generic.rs:3:6
  |
3 |     A(T, u8),
  |      ^^^^^^^
